// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`/rollup.js should allow disabling of named exports 1`] = `
"var css = {
    \\"str\\": \\"\\\\\\"string\\\\\\"\\",
    \\"fooga\\": \\"fooga\\"
};

console.log(css);
"
`;

exports[`/rollup.js should be able to tree-shake results 1`] = `
"var fooga = \\"fooga\\";

console.log(fooga);
"
`;

exports[`/rollup.js should generate CSS 1`] = `
"/* packages/rollup/test/specimens/simple.css */
.fooga {
    color: red;
}
"
`;

exports[`/rollup.js should generate JSON 1`] = `
"{
    \\"packages/rollup/test/specimens/simple.css\\": {
        \\"str\\": \\"\\\\\\"string\\\\\\"\\",
        \\"fooga\\": \\"fooga\\"
    }
}"
`;

exports[`/rollup.js should generate exports 1`] = `
"var css = {
    \\"str\\": \\"\\\\\\"string\\\\\\"\\",
    \\"fooga\\": \\"fooga\\"
};

console.log(css);
"
`;

exports[`/rollup.js should generate external source maps 1`] = `
Object {
  "file": Any<String>,
  "mappings": "AAAA,+CAAC;AAED;IACI,WAAW;CACd",
  "names": Array [],
  "sources": Array [
    "packages/rollup/test/specimens/simple.css",
  ],
  "sourcesContent": Array [
    "@value str: \\"string\\";

.fooga {
    color: red;
}
",
  ],
  "version": 3,
}
`;

exports[`/rollup.js should not output sourcemaps when they are disabled 1`] = `
"/* packages/rollup/test/specimens/simple.css */
.fooga {
    color: red;
}
"
`;

exports[`/rollup.js should provide named exports 1`] = `
"var str = \\"\\\\\\"string\\\\\\"\\";
var num = \\"10\\";
var dim = \\"10px\\";
var mix = \\"1px solid red\\";
var a = \\"a\\";

console.log(a, str, num, dim, mix);
"
`;

exports[`/rollup.js should respect the CSS dependency tree 1`] = `
"var css = {
    \\"wooga\\": \\"fooga wooga\\"
};

console.log(css);
"
`;

exports[`/rollup.js should warn & not export individual keys when they are not valid identifiers 1`] = `
Object {
  "code": "PLUGIN_WARNING",
  "id": Any<String>,
  "message": "Invalid JS identifier \\"fooga-wooga\\", unable to export",
  "plugin": "modular-css",
  "toString": [Function],
}
`;

exports[`/rollup.js should warn & not export individual keys when they are not valid identifiers 2`] = `
"var css = {
    \\"fooga\\": \\"fooga\\",
    \\"fooga-wooga\\": \\"fooga-wooga\\"
};
var fooga = \\"fooga\\";

console.log(css, fooga);
"
`;

exports[`/rollup.js shouldn't disable sourcemap generation 1`] = `
SourceMap {
  "file": "simple.js",
  "mappings": ";;;;;AAEA,OAAO,CAAC,GAAG,CAAC,GAAG,CAAC,CAAC",
  "names": Array [],
  "sources": Array [
    "packages/rollup/test/specimens/simple.js",
  ],
  "sourcesContent": Array [
    "import css from \\"./simple.css\\";

console.log(css);
",
  ],
  "version": 3,
}
`;

exports[`/rollup.js watch should correctly add new css files in watch mode when files change 1`] = `""`;

exports[`/rollup.js watch should correctly add new css files in watch mode when files change 2`] = `
"/* packages/rollup/test/output/one.css */
.mc19ef5610_one {
    color: red;
}"
`;

exports[`/rollup.js watch should correctly update files within the dependency graph in watch mode when files change 1`] = `
"/* packages/rollup/test/output/one.css */
.mc19ef5610_one {
    color: red;
}
/* packages/rollup/test/output/two.css */
.mc32dbcb4b_two {
    
    color: blue;
}"
`;

exports[`/rollup.js watch should correctly update files within the dependency graph in watch mode when files change 2`] = `
"/* packages/rollup/test/output/one.css */
.mc19ef5610_one {
    color: green;
}
/* packages/rollup/test/output/two.css */
.mc32dbcb4b_two {
    
    color: blue;
}"
`;

exports[`/rollup.js watch should generate correct builds in watch mode when files change 1`] = `
"/* packages/rollup/test/output/watched.css */
.mc580619a9_one { color: red; }
/* packages/rollup/test/specimens/simple.css */
.mc12d71625_fooga {
    color: red;
}"
`;

exports[`/rollup.js watch should generate correct builds in watch mode when files change 2`] = `
"/* packages/rollup/test/output/watched.css */
.mc580619a9_two { color: blue; }
/* packages/rollup/test/specimens/simple.css */
.mc12d71625_fooga {
    color: red;
}"
`;
